# video_player

./: README.md  audio_extractor.py  main.py  main_window.py  pyproject.toml  transcriber.py  translator.py
