[project]
name = "video-player-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argostranslate>=1.11.0",
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "pyqt6>=6.10.2",
    "torch==2.2.2",
    "numpy<2",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
